Bug 1498097 - never delete template when sending. r=aceman DONTBUILD